# InferenceZoo

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
inferencezoo/inference/: CMakeLists.txt  Makefile  pytorchscript.py  torchscript.cpp
inferencezoo/train/: config.py  dataloader.py  infer.py  model.py  train.py
